--- a/garbage/pom.xml
+++ b/garbage/pom.xml
@@ -8,7 +8,7 @@
     <groupId>com.ningbo</groupId>
     <artifactId>garbage</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>garbage</name>
     <description>NingBo Garbage project</description>
@@ -37,24 +37,17 @@
             <!--<artifactId>spring-boot-starter-web</artifactId>-->
         <!--</dependency>-->
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-tomcat</artifactId>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
-        <!--<dependency>-->
-        <!--<groupId>org.xerial</groupId>-->
-        <!--<artifactId>sqlite-jdbc</artifactId>-->
-        <!--<version>3.20.0</version>-->
-        <!--&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
-        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
