--- a/garbage/src/main/resources/application.properties
+++ b/garbage/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #打包成war的时候要指定
-server.context-path=/garbage
+#server.context-path=/garbage
 # 错误页，指定发生错误时，跳转的URL。请查看BasicErrorController源码便知
 server.error.path=/error
 # 服务端口
@@ -21,9 +21,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rds10gd4l3kgli9958sio.mysql.rds.aliyuncs.com:3306/garbage?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
-spring.datasource.username=xiangqu
-spring.datasource.password=xiangqu_n1X5bN
+spring.datasource.url=jdbc:mysql://localhost:3306/garbage?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=123456
 
 #spring.datasource.url=jdbc:mysql://172.16.81.100:3306/test?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 #spring.datasource.username=root
